# dnddiceroller

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildcharacter_ledger  buildscript.sh  character.h  chartemp.json  compile.sh  main.cc  readme
testfiles/: chartemp.json
